[FIX] Routes errors on carteira
